--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ VITE_FIREBASE_STORAGE_BUCKET=123
 VITE_FIREBASE_MESSAGING_SENDER_ID=123
 VITE_FIREBASE_APP_ID=123
 VITE_FIREBASE_MEASUREMENT_ID=123
+
+# gemini
+VITE_GEMINI_API_KEY=123
