Delete some unwanted files

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "mockmentor"
-  }
+    "default": "mockmentor2025",
+    "production": "mockmentor2025"
+  },
+  "targets": {},
+  "etags": {}
 }
